Added update a booking + tests
