# bookings/swagger.yaml
@@ -184,36 +184,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-          
-  /users/{user_id}/contacts:
-    get: ########################## GET A USER CONTACTS
-      tags:
-      - Users
-      summary: Get a user's contacts
-      operationId: app.get_contacts
-      parameters:
-      - name: user_id
-        in: path
-        description: User's Unique Identifier
-        required: true
-        schema:
-          type: integer
-      responses:
-        200:
-          description: Return user's contacts
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/User'
-        404:
-          description: User not found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-          
+
 components:
   schemas:
 
@@ -284,14 +255,6 @@ components:
           format: date-time
           description: When the user actually entered the restaurant
           example: "2020-11-10T10:30:00+1:00"
-
-    User:
-      type: object
-      properties:
-        id:
-          type: integer
-          description: The Unique Identifier of a user
-          example: 42
 
     Error:
       type: object
